--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git://github.com/sourcegraph/tern-def-origin.git"
   },
   "dependencies": {
-    "tern": "git://github.com/marijnh/tern.git",
+    "tern": "*",
     "defnode": "0.0.4"
   },
   "devDependencies": {
